--- a/src/App.scss
+++ b/src/App.scss
@@ -21,3 +21,19 @@ section a {
   color: inherit;
   text-decoration: none;
 }
+
+@mixin mobile {
+  @media (max-width: 738px) {
+    @content;
+  }
+}
+@mixin tablet {
+  @media (max-width: 1024px) {
+    @content;
+  }
+}
+@mixin desktop {
+  @media (max-width: 1366px) {
+    @content;
+  }
+}
