--- a/src/components/hero/Hero.scss
+++ b/src/components/hero/Hero.scss
@@ -1,3 +1,5 @@
+@import "../../App.scss";
+
 .hero {
   height: calc(100vh - 100px);
   background: linear-gradient(180deg, #0c0c1d, #111132);
@@ -5,10 +7,19 @@
   overflow: hidden;
   position: relative;
 
+  @include mobile {
+    flex-direction: column;
+  }
+
   .imageContainer {
     height: 100%;
-    width: 45%;
+    width: 50%;
     z-index: 1;
+
+    @include mobile {
+      height: 50%;
+      width: 100%;
+    }
 
     img {
       object-fit: cover;
@@ -16,6 +27,11 @@
     }
   }
   .textContainer {
+    @include mobile {
+      width: 100%;
+      height: 50%;
+      margin-bottom: 0rem;
+    }
     width: 55%;
     align-items: center;
     text-align: left;
@@ -26,6 +42,10 @@
 
     .text > * {
       margin: 2rem 0;
+
+      @include mobile {
+        margin: 1rem 0;
+      }
     }
 
     span {
@@ -33,9 +53,17 @@
       font-weight: bold;
       font-size: 24px;
       letter-spacing: 5px;
+
+      @include mobile {
+        font-size: 32px;
+      }
     }
     h1 {
       font-size: 5rem;
+
+      @include mobile {
+        font-size: 3rem;
+      }
     }
 
     .buttons {
@@ -60,6 +88,10 @@
     .scrollImg {
       margin: 0;
       height: 3rem;
+
+      @include mobile {
+        margin-left: 8.2rem;
+      }
     }
   }
   .slidingTextContainer {
