--- a/src/components/navbar/Navbar.scss
+++ b/src/components/navbar/Navbar.scss
@@ -1,3 +1,5 @@
+@import "../../App.scss";
+
 .nav {
   height: 100px;
 
@@ -9,8 +11,17 @@
     align-items: center;
     justify-content: space-between;
 
+    @include mobile {
+      justify-content: flex-end;
+      padding: 2rem;
+    }
+
     span {
       font-weight: bold;
+
+      @include mobile {
+        display: none;
+      }
     }
 
     .icons {
