--- a/src/components/parallax/Parallax.scss
+++ b/src/components/parallax/Parallax.scss
@@ -1,3 +1,5 @@
+@import "../../App.scss";
+
 .parallax {
   height: 100%;
   width: 100%;
@@ -9,6 +11,11 @@
 
   h1 {
     font-size: 100px;
+    text-align: center;
+
+    @include mobile {
+      font-size: 70px;
+    }
   }
   .mountains {
     background-image: url("/mountains.png");
@@ -27,6 +34,12 @@
     height: 100%;
     width: 100%;
     z-index: 2;
+
+    @include mobile {
+      background-position: center;
+      background-size: contain;
+      background-repeat: no-repeat;
+    }
   }
   .stars {
     background-image: url("/stars.png");
