--- a/src/components/services/Services.scss
+++ b/src/components/services/Services.scss
@@ -1,8 +1,14 @@
+@import "../../App.scss";
+
 .services {
   height: 100%;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
+
+  @include mobile {
+    gap: 50px;
+  }
 
   .headerSection {
     flex: 1;
@@ -12,16 +18,29 @@
     text-align: right;
     gap: 20px;
 
+    @include mobile {
+      gap: 8px;
+      margin-top: 40px;
+    }
+
     p {
       color: gray;
       font-size: 20px;
       font-weight: 200;
+
+      @include mobile {
+        font-size: 25px;
+      }
     }
 
     hr {
       width: 300px;
       border: none;
       border: 0.5px solid gray;
+
+      @include mobile {
+        width: 90px;
+      }
     }
   }
 
@@ -34,6 +53,11 @@
     h1 {
       font-size: 96px;
       font-weight: 100;
+
+      @include mobile {
+        font-size: 48px;
+        width: max-content;
+      }
     }
 
     .title {
@@ -41,11 +65,21 @@
       align-items: center;
       gap: 50px;
 
+      @include mobile {
+        gap: 20px;
+        flex-direction: column;
+      }
+
       img {
         width: 300px;
         height: 100px;
         border-radius: 50px;
         object-fit: cover;
+
+        @include mobile {
+          width: 250px;
+          height: 70px;
+        }
       }
 
       button {
@@ -57,6 +91,12 @@
         border: none;
         cursor: pointer;
         font-weight: 500;
+
+        @include mobile {
+          width: 250px;
+          height: 70px;
+          font-size: 18px;
+        }
       }
     }
   }
@@ -66,6 +106,10 @@
     margin-bottom: 1rem;
     flex: 2;
     display: flex;
+
+    @include mobile {
+      display: none;
+    }
 
     .box {
       padding: 30px 40px;
