--- a/src/App.scss
+++ b/src/App.scss
@@ -14,7 +14,7 @@ body {
   background-color: #0c0c1d;
 }
 section {
-  height: 100vh;
+  height: 100dvh;
   scroll-snap-align: center;
 }
 section a {
