--- a/src/components/contact/Contact.scss
+++ b/src/components/contact/Contact.scss
@@ -1,3 +1,5 @@
+@import "../../App.scss";
+
 .contact {
   display: flex;
   align-items: center;
@@ -11,18 +13,38 @@
     margin: auto;
     width: 100%;
 
+    @include mobile {
+      flex-direction: column;
+      gap: 40px;
+    }
+
     .textContainer {
       width: 100%;
       display: flex;
       flex-direction: column;
       gap: 30px;
 
+      @include mobile {
+        gap: 10px;
+        text-align: center;
+        font-size: 14px;
+        height: 50%;
+      }
+
       h1 {
         font-size: 72px;
         line-height: 85%;
+
+        @include mobile {
+          font-size: 50px;
+        }
       }
       p {
         font-size: 14px;
+
+        @include mobile {
+          font-size: 10px;
+        }
       }
     }
 
@@ -30,11 +52,24 @@
       width: 100%;
       position: relative;
 
+      @include mobile {
+        height: 80%;
+        width: 80%;
+        margin: 10px auto;
+      }
+
       .phoneSvg {
         stroke: orange;
         position: absolute;
-        margin: auto;
+        margin: 10px auto;
         z-index: -1;
+
+        svg {
+          @include mobile {
+            height: 90%;
+            width: 100%;
+          }
+        }
       }
 
       form {
@@ -58,6 +93,10 @@
           padding: 10px;
           border-radius: 10px;
           height: 200px;
+
+          @include mobile {
+            height: 100px;
+          }
         }
         button {
           cursor: pointer;
