--- a/src/components/portfolio/Portfolio.scss
+++ b/src/components/portfolio/Portfolio.scss
@@ -1,3 +1,5 @@
+@import "../../App.scss";
+
 .portfolio {
   .progress {
     position: sticky;
@@ -6,9 +8,11 @@
     color: orange;
     text-align: center;
     padding-top: 30px;
-    background-color: #0c0c1d;
-    z-index: 99;
     font-size: 1.5rem;
+
+    @include mobile {
+      padding-top: calc(100dvh - 100px);
+    }
   }
   .progressBar {
     height: 5px;
@@ -33,11 +37,22 @@
       gap: 50px;
       height: 100%;
 
+      @include mobile {
+        flex-direction: column;
+      }
+
       .imageContainer {
         background-color: white;
         padding: 10px;
         flex: 1;
         height: 50%;
+
+        @include mobile {
+          margin-top: 50px;
+          padding: 5px;
+          width: 80%;
+          flex: 0.5;
+        }
 
         img {
           height: 100%;
@@ -51,8 +66,18 @@
         flex-direction: column;
         gap: 30px;
 
+        @include mobile {
+          transform: none !important;
+          gap: 20px;
+          padding: 10px 30px;
+          flex: 1.2;
+        }
+
         h1 {
           font-size: 52px;
+          @include mobile {
+            font-size: 40px;
+          }
         }
         p {
           font-size: 16px;
