--- a/src/components/contact/Contact.scss
+++ b/src/components/contact/Contact.scss
@@ -64,12 +64,10 @@
         margin: 10px auto;
         z-index: -1;
 
-        svg {
-          @include mobile {
-            height: 90%;
-            width: 100%;
-          }
+        @include mobile{
+          display: none;
         }
+        
       }
 
       form {
